--- a/templates/order-form.html
+++ b/templates/order-form.html
@@ -1,17 +1,64 @@
 <script type="text/x-template" id="tpl-order">
-<div>
-    <h2>Form Pemesanan</h2>
+<div class="p-6">
 
-    <div>
-        <label>Pilih Paket</label>
-        <select v-model="pilihan">
-            <option value="">-- pilih paket --</option>
-            <option v-for="p in paket" :value="p.kode">{{ p.kode }} - {{ p.nama }}</option>
-        </select>
+    <h2 class="text-2xl font-semibold mb-4">Form Pemesanan</h2>
 
-        <ul v-if="currentPaket">
-            <li v-for="kode in currentPaket.isi">{{ kode }}</li>
-        </ul>
+    <div class="grid grid-cols-2 gap-4 bg-white p-6 rounded shadow">
+
+        <div>
+            <label class="font-semibold">Nomor DO (Auto)</label>
+            <input :value="generatedDO" disabled
+                   class="p-3 border rounded w-full bg-gray-200">
+        </div>
+
+        <div>
+            <label class="font-semibold">Tanggal Kirim</label>
+            <input v-model="tanggal" type="date" class="p-3 border rounded w-full">
+        </div>
+
+        <div>
+            <label class="font-semibold">NIM</label>
+            <input v-model="nim" class="p-3 border rounded w-full">
+        </div>
+
+        <div>
+            <label class="font-semibold">Nama</label>
+            <input v-model="nama" class="p-3 border rounded w-full">
+        </div>
+
+        <div class="col-span-2">
+            <label class="font-semibold">Ekspedisi</label>
+            <select v-model="selectedEkspedisi" class="p-3 border rounded w-full">
+    <option value="">-- pilih --</option>
+    <option>JNE Regular</option>
+    <option>JNE Express</option>
+</select>
+
+        </div>
+
+        <div class="col-span-2">
+            <label class="font-semibold">Paket Bahan Ajar</label>
+            <select v-model="kodePaket" class="p-3 border rounded w-full">
+                <option value="">-- pilih paket --</option>
+                <option v-for="p in paket" :value="p.kode">{{ p.kode }} - {{ p.nama }}</option>
+            </select>
+
+            <ul class="mt-2 pl-6 list-disc" v-if="selectedPaket">
+                <li v-for="i in selectedPaket.isi">{{ i }}</li>
+            </ul>
+        </div>
+
+        <div>
+            <label class="font-semibold">Total Harga</label>
+            <input :value="selectedPaket ? formatRupiah(selectedPaket.harga) : ''"
+                disabled class="p-3 border rounded w-full bg-gray-200">
+        </div>
+
+        <button @click="simpanDO"
+                class="col-span-2 bg-green-600 text-white px-4 py-3 rounded w-full">
+            Simpan Delivery Order
+        </button>
+
     </div>
 </div>
 </script>
